grammar.js
      test: $ => choice(
        $.comment,
        $.ident,
        $.symbolic_op,

        // literals
        $.bytearray,
        $.bytechar,
        $.string,
        $.char,

        $.verbatim_string,
        $.verbatim_bytearray,
        $.triple_quoted_string,

        $.ieee32,
        $.ieee64,

        $.int,
        $.xint,
        $.decimal,
        $.bignum,
        $.sbyte,
        $.byte,
        $.int16,
        $.uint16,
        $.int32,
        $.uint32,
        $.nativeint,
        $.unativeint,
        $.int64,
        $.uint64,

        $.shebang,
        $.line_directive,
        $.cond_directive,

        $.active_pattern_op_name,
        $.long_ident,

        //$.expr
      ),
      
      // 3.1 Whitespace
      cond_directive: $ => choice(
        $.if_directive,
        $.else_directive,
        $.endif_directive),
      // XXX line occupation rule ignored
      if_directive: $ => seq(
        "#if",
        $._if_expression_text),
      _if_expression_text: $ => choice(
        prec.left(1, seq($._if_expression_text, "||", $._if_expression_text)),
        prec.left(2, seq($._if_expression_text, "&&", $._if_expression_text)),
        prec.left(3, seq("!", $._if_expression_text)),
        prec.left(4, seq("(", $._if_expression_text, ")")),
        $._ident_text,
      ),
      
      // 3.4 Identifiers and Keywords
      _ident_text: $ => seq(
        $._identifier_start_char,
        repeat($._identifier_char)
      ),
      _escaped_ident_text: $ => /``([^`\n\r\t] | `[^`\n\r\t])+``/,
      ident: $ => choice(
        $._ident_text,
        $._escaped_ident_text
      ),

      long_ident : $ => seq($.ident, repeat1(seq(".", $.ident))),
