corpus/ident.txt
===
basic ident
===

sample

---

(test (ident))

===
ident with numbers
===

wh0ar3y0u

---

(test (ident))

===
tick ident
===

``I can have anything in here ASDFAS?DFS``

--- 

(test (ident))

===
ident with leading _
===

_yo

---

(test (ident))

===
long ident
===
foo.bar.baz
---
(test (long_ident (ident) (ident) (ident)))


===
long ident with tick
===
foo.bar.``baz``
---
(test (long_ident (ident) (ident) (ident)))
